--- a/main.tex
+++ b/main.tex
@@ -36,12 +36,12 @@ top=0.7in
 \usepackage{mathrsfs}
 
 \theoremstyle{definition}
-\newtheorem{theorem}{Theorem}[section]
+\newtheorem{theorem}{Theorem}[chapter]
 \newtheorem{lemma}[theorem]{Lemma}
 \newtheorem*{corollary}{Corollary}
-\newtheorem{definition}[theorem]{Definition}
+\newtheorem{definition}{Definition}[chapter]
 \newtheorem{pproposition}[theorem]{Proposition}
-\newtheorem{exercise}{Exercise}[section]
+\newtheorem{exercise}{Exercise}[chapter]
 \newtheorem{problem}{Problem}[section]
 \newtheorem*{proposition}{Proposition}
 \newtheorem*{solution}{Solution}
@@ -58,22 +58,12 @@ top=0.7in
 	\maketitle
 	\tableofcontents
 	\mainmatter
-%	\input{chapters/chapter-1.tex}
-%	\input{chapters/chapter-2.tex}
-%	\input{chapters/chapter-3.tex}
-%	\input{chapters/chapter-4.tex}
-%	\input{chapters/chapter-5.tex}
-%	\input{chapters/chapter-6.tex}
-%	\input{chapters/chapter-7.tex}
-%	\input{chapters/chapter-8.tex}
-%	\input{chapters/chapter-9.tex}
-%	\input{chapters/chapter-10.tex}
-%	\input{chapters/chapter-11.tex}
+	\input{chapters/chapter-1.tex}
 %	\appendix
 %	\input{chapters/appendix-2.tex}
 %	\input{chapters/appendix-3.tex}
-%	\backmatter
-%	\printbibliography[heading=bibintoc]
+	\backmatter
+	\printbibliography[heading=bibintoc]
 %	\printglossaries
-%	\printindex
+	\printindex
 \end{document}
